displaying task component

--- a/src/app/components/task/task.component.html
+++ b/src/app/components/task/task.component.html
@@ -1,1 +1,7 @@
-<p>task works!</p>
+<div class="task-card" *ngIf="task">
+  <h2>Demi</h2>
+  <p>
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed sequi quibusdam
+    nulla deserunt vero doloremque ducimus distinctio veniam amet reiciendis!
+  </p>
+</div>
