added a font for the body- gloria hallelujah- google font

--- a/src/app/components/task/task.component.html
+++ b/src/app/components/task/task.component.html
@@ -1,7 +1,6 @@
 <div class="task-card" *ngIf="task">
-  <h2>Demi</h2>
+  <h2>{{ task.title }}</h2>
   <p>
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed sequi quibusdam
-    nulla deserunt vero doloremque ducimus distinctio veniam amet reiciendis!
+    {{ task.description }}
   </p>
 </div>
