--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -2,6 +2,10 @@ h1 {
   font-family: "headings";
 }
 
+h2 {
+  font-family: "headings";
+}
+
 .nav {
   padding: 10px 30px;
   background-color: #ffd24c;
