--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,4 +3,19 @@
   <span></span>
 </div>
 
-<app-task *ngFor="let task of todo" [task]="task"></app-task>
+<!-- <app-task *ngFor="let task of todo" [task]="task"></app-task> -->
+<div class="content-wrapper">
+  <div class="container-wrapper">
+    <div class="container">
+      <h2>Not Started</h2>
+    </div>
+
+    <div class="container">
+      <h2>In Progress</h2>
+    </div>
+
+    <div class="container">
+      <h2>Completed</h2>
+    </div>
+  </div>
+</div>
