--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,14 +8,78 @@
   <div class="container-wrapper">
     <div class="container">
       <h2>Not Started</h2>
+
+      <div
+        class="list"
+        cdkDropList
+        id="todo"
+        #todoList="cdkDropList"
+        [cdkDropListData]="todo"
+        [cdkDropListConnectedTo]="[doneList, inProgressList]"
+        (cdkDropListDropped)="drop($event)"
+      >
+        <!-- show only when the list is empty -->
+        <p class="empty-label" *ngIf="todo.length === 0">
+          (⁠⁠*・⁠～⁠・⁠*⁠)<br />This list is empty!
+        </p>
+
+        <app-task
+          (edit)="editTask('todo', $event)"
+          *ngFor="let task of todo"
+          cdkDrag
+          [task]="task"
+        ></app-task>
+      </div>
     </div>
 
     <div class="container">
       <h2>In Progress</h2>
+      <div
+        class="list"
+        cdkDropList
+        id="inProgress"
+        #inProgressList="cdkDropList"
+        [cdkDropListData]="inProgress"
+        [cdkDropListConnectedTo]="[doneList, todoList]"
+        (cdkDropListDropped)="drop($event)"
+      >
+        <!-- show only when the list is empty -->
+        <p class="empty-label" *ngIf="inProgress.length === 0">
+          (⁠⁠*・⁠～⁠・⁠*⁠)<br />This list is empty!
+        </p>
+
+        <app-task
+          (edit)="editTask('inProgress', $event)"
+          *ngFor="let task of inProgress"
+          cdkDrag
+          [task]="task"
+        ></app-task>
+      </div>
     </div>
 
     <div class="container">
       <h2>Completed</h2>
+      <div
+        class="list"
+        cdkDropList
+        id="done"
+        #doneList="cdkDropList"
+        [cdkDropListData]="done"
+        [cdkDropListConnectedTo]="[doneList, inProgressList]"
+        (cdkDropListDropped)="drop($event)"
+      >
+        <!-- show only when the list is empty -->
+        <p class="empty-label" *ngIf="done.length === 0">
+          (⁠⁠*・⁠～⁠・⁠*⁠)<br />This list is empty!
+        </p>
+
+        <app-task
+          (edit)="editTask('done', $event)"
+          *ngFor="let task of done"
+          cdkDrag
+          [task]="task"
+        ></app-task>
+      </div>
     </div>
   </div>
 </div>
