--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,10 @@
   <span></span>
 </div>
 
+<div class="button-container">
+  <button (click)="newTask()">+ Add Task</button>
+</div>
+
 <!-- <app-task *ngFor="let task of todo" [task]="task"></app-task> -->
 <div class="content-wrapper">
   <div class="container-wrapper">
