installing material ui

--- a/src/styles.css
+++ b/src/styles.css
@@ -12,3 +12,6 @@
   font-family: "body";
   src: url("./assets/fonts/GloriaHallelujah.ttf") format("truetype");
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
